--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
                   <h5 th:text="${bake.title}"class="card-title"></h5>
                   <p th:text="${bake.description}"class="card-text"></p>
                 </div>
-                <img th:src=${bake.image} class="card-img-top" >
+                <img th:src=@{~/images/65041063-1355-45B6-B5BE-25244BCD4BA7_1_105_c.jpeg} class="card-img-top" >
         </div>
     
           </div>
