--- a/src/main/resources/templates/new_bake.html
+++ b/src/main/resources/templates/new_bake.html
@@ -8,18 +8,27 @@
 </head>
 <body>
     <div class="container">
+        <div class="row">
         <h1>Baking Info</h1>
-        <hr>
-        <h2>Save New Bake</h2>
+        </div>
+        <div class="row">
+            <h2>Save New Bake</h2>
+        </div>
+        <div class="row">
          <form action="#" th:action="@{/saveInfo}" th:object="${info}" method="POST">
+            <label for="img">Title</label>
             <input type="text" th:field = "*{title}" placeholder="Title your bake">
+            <label for="img">Baker's First Name</label>
             <input type="text" th:field = "*{firstName}" placeholder="Baker First Name">
+            <label for="img">Baker's Last Name</label>
             <input type="text" th:field = "*{lastName}" placeholder="Baker Last Name">
+            <label for="img">Bake Description</label>
             <input type="text" th:field = "*{description}" placeholder="Give your bake some life">
-            <label for="img">Add an Image of your Bake</label>
-            <input type="file" id="img" th:field = "*{image}">
+            <label for="img">Add url to picture</label>
+            <input type="text" id="img" th:field = "*{image}">
             <button type="submit">Add some Bakes</button>
         </form>
+        </div>
     </div>
 </body>
 </html>
