--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,19 @@
 body{
-    background-color: rgb(195, 189, 245);
+    background: rgb(40,4,126);
+    background: linear-gradient(90deg, rgba(40,4,126,1) 0%, rgba(38,94,186,1) 21%, rgba(0,212,255,1) 81%);
+
+
+}
+
+.headtag{
+    text-align: center;
+}
+
+.card{
+    background-color: rgb(143, 196, 242);
+}
+
+.img{
+    width: 60%;
+    height: 50%;
 }
