--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,17 +8,23 @@
     <title>My Baking Info</title>
 </head>
 <body>
-    <div class="container my-4" >
-      <a th:href = @{/addInfoForm}>adding you info</a>
-    </div>
-    <div th:each="bake : ${listInfo}" class="container my-4">
+  <div class="container text-center ">
+      <h2 class="">Welcome to my Page of Baking!!</h2> 
+      <a class="text-warning"th:href = @{/addInfoForm}>add info</a>
+  </div>
+   
+    <div th:each="bake : ${listInfo}" class="container text-center my-4">
         
             <div  class="card">
                 <div  class="card-body">
                   <h5 th:text="${bake.title}"class="card-title"></h5>
                   <p th:text="${bake.description}"class="card-text"></p>
                 </div>
-                <img th:src=@{~/images/65041063-1355-45B6-B5BE-25244BCD4BA7_1_105_c.jpeg} class="card-img-top" >
+                <!-- <img th:src=@{images/65041063-1355-45B6-B5BE-25244BCD4BA7_1_105_c.jpeg} class="card-img-top" > -->
+                <!-- <img th:src=${bake.image} class="card-img-top" > -->
+                <img th:src=${bake.pic} class="card-img-top img rounded mx-auto d-block" >
+
+
         </div>
     
           </div>
