--- a/src/main/resources/templates/new_bake.html
+++ b/src/main/resources/templates/new_bake.html
@@ -4,30 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title>add something new</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-        <h1>Baking Info</h1>
-        </div>
-        <div class="row">
+    <div class="container text-center">
+        
+        <h1 class="">Baking Info</h1>
             <h2>Save New Bake</h2>
-        </div>
-        <div class="row">
-         <form action="#" th:action="@{/saveInfo}" th:object="${info}" method="POST">
+        
+            <!-- <div class="row text center"> -->
+            <form action="#" th:action="@{/saveInfo}" th:object="${info}" method="POST">
+            <div class="form-group">
             <label for="img">Title</label>
             <input type="text" th:field = "*{title}" placeholder="Title your bake">
+            </div>
+
+            <div class="form-group">
             <label for="img">Baker's First Name</label>
             <input type="text" th:field = "*{firstName}" placeholder="Baker First Name">
+            </div>
+
+            <div class="form-group">
             <label for="img">Baker's Last Name</label>
             <input type="text" th:field = "*{lastName}" placeholder="Baker Last Name">
+            </div>
+
+            <div class="form-group">
             <label for="img">Bake Description</label>
-            <input type="text" th:field = "*{description}" placeholder="Give your bake some life">
+            <textarea type="text" th:field = "*{description}" placeholder="Give your bake some life"></textarea>
+            </div>
+
+            <div class="form-group">
             <label for="img">Add url to picture</label>
-            <input type="text" id="img" th:field = "*{image}">
+            <input type="text" id="img" th:field = "*{image}" placeholder="Add an image">
+            <!-- <button type="submit">Add some Bakes</button> -->
+             </div>
+            <div class="form-group">
+            <label for="img">Add url to picture</label>
+            <input type="text" id="img" th:field = "*{pic}" placeholder="Add an image">
             <button type="submit">Add some Bakes</button>
+             </div>
         </form>
+        <!-- </div> -->
         </div>
     </div>
 </body>
