--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container text-center ">
       <h2 class="">Welcome to my Page of Baking!!</h2> 
-      <a class="text-warning"th:href = @{/addInfoForm}>add info</a>
+      <!-- <a class="text-warning"th:href = @{/OnlyDJKnowsThisRoute}>add info</a> -->
   </div>
    
     <div th:each="bake : ${listInfo}" class="container text-center my-4">
